--- a/jay/tc/case.html
+++ b/jay/tc/case.html
@@ -177,6 +177,16 @@
                         </div>
 
                         <div class="case-list-box">
+                            <div class=" mob-show pc-none">
+                                <div class="the_select">
+                                    <select class="" name="" required="" data-parsley-min="1"
+                                        data-parsley-min-message="Know from where the website of our company?">
+                                        <option value="0">Taiwan</option>
+                                        <option value="1">Japan</option>
+                                        <option value="1">Korea</option>
+                                    </select>
+                                </div>
+                            </div>
                             <div class="main-title">
                                 <h3 class="text-center">TAIWAN</h3>
                             </div>
