--- a/jay/tc/mrs.html
+++ b/jay/tc/mrs.html
@@ -177,6 +177,22 @@
                                             skeptical..</p>
                                         </a>
                                     </li>
+                                    <!-- 點選 li 才顯示下方 abox -->
+                                    <div class="abox mob-show">
+                                        <div class="top-block-title">
+                                            <h3>title-AAA</h3>
+                                        </div>
+                                        <div class="img-box">
+                                            <!-- 沒上一頁 + no-click -->
+                                            <a class="arr-btn prev no-click">
+                                                <i class="fa-solid fa-angle-left"></i>
+                                            </a>
+                                            <a class="arr-btn next">
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </a>
+                                            <img class="" src="images/img_010.png" alt="">
+                                        </div>
+                                    </div>
                                     <li>
                                         <a href="#">
                                             <h4>Main title-AAA</h4>
@@ -206,6 +222,22 @@
                                                 skeptical..</p>
                                         </a>
                                     </li>
+                                    <!-- 點選 li 才顯示下方 abox -->
+                                    <div class="abox mob-show">
+                                        <div class="top-block-title">
+                                            <h3>Main title-AA AMain title-AAA construction safety, the consequences can be imagined. Still,</h3>
+                                        </div>
+                                        <div class="img-box">
+                                            <!-- 沒上一頁 + no-click -->
+                                            <a class="arr-btn prev no-click">
+                                                <i class="fa-solid fa-angle-left"></i>
+                                            </a>
+                                            <a class="arr-btn next">
+                                                <i class="fa-solid fa-angle-right"></i>
+                                            </a>
+                                            <img class="" src="images/img_010.png" alt="">
+                                        </div>
+                                    </div>
                                     <li>
                                         <a href="#">
                                             <h4>Main title-AAA</h4>
