--- a/jay/tc/products.html
+++ b/jay/tc/products.html
@@ -160,6 +160,14 @@
                                 <p><a href="#">KekkAI</a></p>
                             </li>
                         </ul>
+                        <div class="the_select mob-show">
+                            <select class="" name="" required="" data-parsley-min="1"
+                                data-parsley-min-message="Know from where the website of our company?">
+                                <option value="0">Abaci</option>
+                                <option value="1">AI@Sense</option>
+                                <option value="1">KekkAI</option>
+                            </select>
+                        </div>
                     </div>
                 </section>
 
