tc-add mob for index & solutions

--- a/jay/tc/solutions.html
+++ b/jay/tc/solutions.html
@@ -142,7 +142,25 @@
                             </span>
                         </a>
                     </div>
-                    <div class="block-box">
+                    <div class="block-box mob-show">
+                        <div class="the_detail_box">
+                            <p>Construation</p>
+                        </div>
+                        <div class="img__3d">
+                            <!-- 沒上一頁 + no-click -->
+                            <a class="arr-btn prev no-click">
+                                <i class="fa-solid fa-angle-left"></i>
+                            </a>
+                            <a class="arr-btn next">
+                                <i class="fa-solid fa-angle-right"></i>
+                            </a>
+                            <div class="img-box">
+                                <!-- 圖片建議 1:1 或 高度更矮 -->
+                                <img class="" src="images/img_000.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block-box pc-box">
                         <div class="img__3d">
                             <!-- 這邊要抓 x, y -->
                             <div class="the_3dtitle_box" style="top: 50%; left: 10%;">
@@ -176,6 +194,16 @@
 
                 <section class="section-wrap submenu-wrap">
                     <div class="block-box">
+                        <div class="pc-none mob-show">
+                            <div class="the_select">
+                                <select class="" name="" required="" data-parsley-min="1"
+                                    data-parsley-min-message="Know from where the website of our company?">
+                                    <option value="0">Taiwan</option>
+                                    <option value="1">Japan</option>
+                                    <option value="1">Korea</option>
+                                </select>
+                            </div>
+                        </div>
                         <ul class="submenu">
                             <li>
                                 <p><a class="Selected" href="#">Supermarket</a></p>
@@ -189,7 +217,7 @@
                         </ul>
                     </div>
                 </section>
-                <section class="section-wrap">
+                <section class="section-wrap mob-none">
                     <div class="block-box">
                         <div class="abox">
                             <div class="main-title">
