CRM - 放上合約專用章

--- a/CRM/contract/project-order-contract_print_toRD.html
+++ b/CRM/contract/project-order-contract_print_toRD.html
@@ -973,11 +973,14 @@
                   </font>
                 </td>
                 <td width="4%">　</td>
-                <td width="48%" style=" padding:3px; border-top: 1px solid #333; ">
+                <td width="48%" style=" padding:3px; border-top: 1px solid #333; position: relative; ">
                   <font
                     style="font-size:12px; line-height: 1.5; color: #555; display: block;  font-weight: bold;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     威旭數據科技股份有限公司確認用印
                   </font>
+                  <div style="position:absolute; right:calc( 50% - 95px); bottom:20px; width: 190px; z-index: -1;">
+                    <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                  </div>
                 </td>
               </tr>
             </table>
