--- a/CRM/contract/master-contract_print_toRD.html
+++ b/CRM/contract/master-contract_print_toRD.html
@@ -403,7 +403,13 @@
               用　　印：<br>
             </font>
           </div>
-          <div style="padding: 0px 0 240px 0;">
+          <div style="padding: 0px 0 240px 0; position: relative;">
+            <div style="position:absolute; left: 20px; top:150px; width: 120px;">
+              <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
+            </div>
+            <div style="position:absolute; left: 160px; top:180px; width: 70px;">
+              <img src="../images/corporate_seal_s.png" width="100%" alt="公司用印">
+            </div>
             <font
               style="font-size:12px; line-height: 1.5; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
               乙　　方：威旭數據科技股份有限公司<br>
@@ -1021,8 +1027,13 @@
                 公司公章（大章）及法定代表人章（小章）
               </font>
             </td>
-            <td style="padding:3px 5px;border-bottom: 1px solid #dbdbdb;">
-        
+            <td style="padding:3px 5px;border-bottom: 1px solid #dbdbdb; position: relative;">
+              <div style="position:absolute; left: 20px; top:20px; width: 120px;">
+                <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
+              </div>
+              <div style="position:absolute; left: 160px; top:40px; width: 70px;">
+                <img src="../images/corporate_seal_s.png" width="100%" alt="公司用印">
+              </div>
             </td>
           </tr>
           <tr>
@@ -1041,8 +1052,10 @@
                 公司媒體專用章
               </font>
             </td>
-            <td style="padding:3px 5px;">
-        
+            <td style="padding:3px 5px; position: relative;">
+              <div style="position:absolute; left: 15px; top:10px; width: 190px;">
+                <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+              </div>
             </td>
           </tr>
         </table>
