--- a/CRM/contract/media-ad-contract_print_toRD.html
+++ b/CRM/contract/media-ad-contract_print_toRD.html
@@ -64,8 +64,7 @@
                   地址：XXXXXXXXXXXXXXXXXXXXXXXXXXXX<br>
                   公司電話：XXXXXX<br>
                   統一編號：XXXXXXXX<br>
-                  聯絡人：XXX<br>
-                  聯絡人電話：(02)1111-1111<br>
+                  聯絡人 / 電話：XXX / (02)1111-1111<br>
                   聯絡 Email：XXXXX@XXX.com.tw
                 </font>
               </td>
@@ -80,8 +79,7 @@
                   地址：104 台北市中山區南京東路三段 63 號 8 樓<br>
                   公司電話：(02)2502-1980<br>
                   統一編號：90656422<br>
-                  聯絡人：XXX<br>
-                  聯絡人電話：(02)1111-1111 #107<br>
+                  聯絡人 / 電話：XXX / (02)1111-1111 #107<br>
                   聯絡 Email：XXXXX@XXX.com.tw
                 </font>
               </td>
@@ -499,7 +497,7 @@
                 </font>
               <li>
                 <font
-                  style="font-size:12px color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  style="font-size:12px; color: #333; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                   開立發票方式：逐月付款後開立發票
                 </font>
               </li>
@@ -586,11 +584,14 @@
                   </font>
                 </td>
                 <td width="4%">　</td>
-                <td width="48%" style=" padding:3px; border-top: 1px solid #333; ">
+                <td width="48%" style=" padding:3px; border-top: 1px solid #333; position: relative; ">
                   <font
                     style="font-size:12px; line-height: 1.5; color: #555; display: block;  font-weight: bold;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     威旭數據科技股份有限公司確認用印
                   </font>
+                  <div style="position:absolute; right:calc( 50% - 95px); bottom:20px; width: 190px; z-index: -1;">
+                    <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                  </div>
                 </td>
               </tr>
             </table>
