--- a/CRM/contract/project-contract_print_toRD.html
+++ b/CRM/contract/project-contract_print_toRD.html
@@ -1679,7 +1679,7 @@
             用　　印：<br>
           </font>
         </div>
-        <div style="padding: 0px 0 240px 0;">
+        <div style="padding: 0px 0 240px 0; position: relative;">
           <font
             style="font-size:12px; line-height: 1.5; color: #333; display: block; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
             乙　　方：威旭數據科技股份有限公司<br>
@@ -1689,6 +1689,9 @@
             公司電話： (02)2502-1980<br>
             用　　印：<br>
           </font>
+          <div style="position:absolute; left: 15px; top:150px; width: 190px;">
+            <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+          </div>
         </div>
         <font style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 6mm;
                       bottom: 0mm;">
