tc - add yt iframe

--- a/jay/tc/media.html
+++ b/jay/tc/media.html
@@ -147,15 +147,16 @@
                     </div>
                 </section>
 
-                <section class="section-wrap">
+                <section class="section-wrap bg-gray">
                     <div class="block-box">
                         <div class="video-box">
                             <ul>
                                 <li>
                                     <a class="a_video">
-                                        <div class="img-box">
-                                            <img src="images/v_01.png" alt="">
-                                        </div>
+                                        <iframe class="video" src="https://www.youtube.com/embed/B4CslEA2ZKw?si=EEDed_UOs3B9XbuN"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                            allowfullscreen></iframe>
                                         <div class="text-contents">
                                             <p class="text-center">
                                                 video title
@@ -165,9 +166,10 @@
                                 </li>
                                 <li>
                                     <a class="a_video">
-                                        <div class="img-box">
-                                            <img src="images/v_02.png" alt="">
-                                        </div>
+                                        <iframe class="video" src="https://www.youtube.com/embed/B4CslEA2ZKw?si=EEDed_UOs3B9XbuN" title="YouTube video player"
+                                            frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                            allowfullscreen></iframe>
                                         <div class="text-contents">
                                             <p class="text-center">
                                                 video title
@@ -177,21 +179,10 @@
                                 </li>
                                 <li>
                                     <a class="a_video">
-                                        <div class="img-box">
-                                            <img src="images/v_03.png" alt="">
-                                        </div>
-                                        <div class="text-contents">
-                                            <p class="text-center">
-                                                video title
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="a_video">
-                                        <div class="img-box">
-                                            <img src="images/v_04.png" alt="">
-                                        </div>
+                                        <iframe class="video" src="https://www.youtube.com/embed/B4CslEA2ZKw?si=EEDed_UOs3B9XbuN" title="YouTube video player"
+                                            frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                            allowfullscreen></iframe>
                                         <div class="text-contents">
                                             <p class="text-center">
                                                 video title
