CRM - 公司用印處於下方加上單號浮水

--- a/CRM/contract/project-contract_print_toRD.html
+++ b/CRM/contract/project-contract_print_toRD.html
@@ -1690,7 +1690,10 @@
             用　　印：<br>
           </font>
           <div style="position:absolute; left: 15px; top:150px; width: 190px;">
-            <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+            <div style="position: relative;">
+              <font style="position: absolute; z-index: 5; bottom: 28px; color: #afafaf; z-index: -1;">No.11100000223134</font>
+              <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+            </div>
           </div>
         </div>
         <font style="font-size:12px; color: #333; display: block; text-align: right; font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif; position: absolute; right: 6mm;
