--- a/CRM/contract/master-contract_print_toRD.html
+++ b/CRM/contract/master-contract_print_toRD.html
@@ -405,10 +405,16 @@
           </div>
           <div style="padding: 0px 0 240px 0; position: relative;">
             <div style="position:absolute; left: 20px; top:150px; width: 120px;">
-              <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
+              <div style="position: relative;">
+                <font style="position: absolute; z-index: 5; left: 40px; bottom: 15px; color: #afafaf; z-index: -1;">No.11100000223134
+                </font>
+                <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
+              </div>
             </div>
             <div style="position:absolute; left: 160px; top:180px; width: 70px;">
-              <img src="../images/corporate_seal_s.png" width="100%" alt="公司用印">
+              <div style="position: relative;">
+                <img src="../images/corporate_seal_s.png" width="100%" alt="公司用印">
+              </div>
             </div>
             <font
               style="font-size:12px; line-height: 1.5; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
@@ -1029,11 +1035,23 @@
             </td>
             <td style="padding:3px 5px;border-bottom: 1px solid #dbdbdb; position: relative;">
               <div style="position:absolute; left: 20px; top:20px; width: 120px;">
+                <div style="position: relative;">
+                  <font style="position: absolute; z-index: 5; left: 40px; bottom: 25px; color: #afafaf; z-index: -1;">No.11100000223134
+                  </font>
+                  <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
+                </div>
+              </div>
+              <div style="position:absolute; left: 160px; top:40px; width: 70px;">
+                <div style="position: relative;">
+                  <img src="../images/corporate_seal_s.png" width="100%" alt="公司用印">
+                </div>
+              </div>
+              <!-- <div style="position:absolute; left: 20px; top:20px; width: 120px;">
                 <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
               </div>
               <div style="position:absolute; left: 160px; top:40px; width: 70px;">
                 <img src="../images/corporate_seal_s.png" width="100%" alt="公司用印">
-              </div>
+              </div> -->
             </td>
           </tr>
           <tr>
@@ -1053,8 +1071,14 @@
               </font>
             </td>
             <td style="padding:3px 5px; position: relative;">
-              <div style="position:absolute; left: 15px; top:10px; width: 190px;">
+              <!-- <div style="position:absolute; left: 15px; top:10px; width: 190px;">
                 <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+              </div> -->
+              <div style="position:absolute; left: 15px; top:10px; width: 190px;">
+                <div style="position: relative;">
+                  <font style="position: absolute; z-index: 5; bottom: 28px; color: #afafaf; z-index: -1;">No.11100000223134</font>
+                  <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                </div>
               </div>
             </td>
           </tr>
