--- a/CRM/contract/media-ad-contract_print_toRD.html
+++ b/CRM/contract/media-ad-contract_print_toRD.html
@@ -88,7 +88,7 @@
           
           <div>
             <font
-              style="font-size:12px; padding-bottom: 5px; color: #333; display: block;  font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+              style="font-size:12px; padding-bottom: 5px; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
               一、委刊媒體內容及費用
             </font>
             <table width="100%" border="0" cellspacing="0" cellpadding="0"
@@ -113,7 +113,7 @@
               </tr>
               <tr>
                 <td width="18%" style=" padding:3px 0 3px 10px; border-bottom: 1px solid #bdbdbd;">
-                  <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  <font style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     產品/產業
                   </font>
                 </td>
@@ -126,7 +126,7 @@
               </tr>
               <tr>
                 <td width="18%" style=" padding:3px 0 3px 10px;">
-                  <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                  <font style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     連結網址
                   </font>
                 </td>
@@ -143,37 +143,37 @@
                     <tr>
                       <th width="18%" align="left" style=" padding:3px 0 3px 10px; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           執行版位/格式
                         </font>
                       </th>
                       <th align="left" style=" padding:3px; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           內容說明
                         </font>
                       </th>
                       <th width="10%" align="right" style="padding:3px; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px;color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px;color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           執行單價
                         </font>
                       </th>
                       <th width="8%" align="right" style="padding:3px; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           數量
                         </font>
                       </th>
                       <th width="8%" align="right" style="padding:3px; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           單位
                         </font>
                       </th>
                       <th width="12%" align="right" style="padding:3px 10px 3px 0; border-bottom: 1px solid #bdbdbd; ">
                         <font
-                          style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           小計
                         </font>
                       </th>
@@ -374,14 +374,14 @@
                       <td colspan="4"
                         style="vertical-align: top; padding:3px 10px; border-top: 1px solid #bdbdbd; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px; line-height: 1.5; color: #333; display: block;  font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; line-height: 1.5; color: #333; display: block;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           媒體廣告合計
                         </font>
                       </td>
                       <td align="right" colspan="2" align="right"
                         style="padding:3px 10px; border-top: 1px solid #bdbdbd; border-bottom: 1px solid #bdbdbd;">
                         <font
-                          style="font-size:12px; line-height: 1.5; color: #333; display: block;  font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; line-height: 1.5; color: #333; display: block;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           480,000
                         </font>
                       </td>
@@ -389,7 +389,7 @@
                     <tr>
                       <td style=" padding:3px 0 3px 10px;">
                         <font
-                          style="font-size:12px; color: #333; height: 14px; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333; height: 12px; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           帳戶設定費
                         </font>
                       </td>
@@ -409,7 +409,7 @@
                     <tr>
                       <td style=" padding:3px 0 3px 10px;">
                         <font
-                          style="font-size:12px; color: #333; min-height: 14px; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333; min-height: 12px; display: block;  font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           服務費
                         </font>
                       </td>
@@ -429,7 +429,7 @@
                     <tr>
                       <td style=" padding:3px 0 3px 10px;">
                         <font
-                          style="font-size:12px; color: #333; min-height: 14px; display: block;font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                          style="font-size:12px; color: #333; min-height: 12px; display: block;font-weight: normal; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                           <span style="color: #999;">預留一行</span>
                         </font>
                       </td>
@@ -468,7 +468,7 @@
               <tr>
                 <td style="padding:3px 10px; border-top:1px solid #bdbdbd;">
                   <font
-                    style="font-size:13px; color: #333; font-style:italic; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     媒體總金額
                   </font>
                 </td>
@@ -476,7 +476,7 @@
                 </td>
                 <td align="right" style="padding:3px 10px; border-top:1px solid #bdbdbd;">
                   <font
-                    style="font-size:14px; color: #333;font-style:italic;  font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     3,055,500
                   </font>
                 </td>
@@ -539,7 +539,7 @@
             </ul>
           
             <font
-              style="font-size:12px; color: #333; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+              style="font-size:12px; color: #333; display: block;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
               三、執行備註
             </font>
             <ul
@@ -579,18 +579,21 @@
               <tr>
                 <td width="48%" style=" padding:3px; border-top: 1px solid #333;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #555; display: block;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     委託公司確認用印
                   </font>
                 </td>
                 <td width="4%">　</td>
                 <td width="48%" style=" padding:3px; border-top: 1px solid #333; position: relative; ">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #555; display: block;  font-weight: bold;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #555; display: block;    font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     威旭數據科技股份有限公司確認用印
                   </font>
-                  <div style="position:absolute; right:calc( 50% - 95px); bottom:20px; width: 190px; z-index: -1;">
-                    <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                  <div style="position:absolute; right:calc( 50% - 95px); bottom:12px; width: 190px; z-index: -1;">
+                    <div style="position: relative;">
+                      <font style="position: absolute; z-index: 5; bottom: 28px; color: #afafaf; z-index: -1;">No.11100000223134</font>
+                      <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                    </div>
                   </div>
                 </td>
               </tr>
