--- a/CRM/contract/project-order-contract_print_toRD.html
+++ b/CRM/contract/project-order-contract_print_toRD.html
@@ -92,7 +92,7 @@
         
           <div>
             <font
-              style="font-size:12px; padding-bottom: 3px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+              style="font-size:12px; padding-bottom: 3px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
               一、專案服務內容及費用
             </font>
             <table width="100%" border="0" cellspacing="0" cellpadding="0"
@@ -100,7 +100,7 @@
               <tr>
                 <td width="18%" style=" padding:0 0 0 10px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     新單
                   </font>
                 </td>
@@ -119,7 +119,7 @@
               <tr>
                 <td width="18%" style=" padding:0 0 0 10px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     產品/產業
                   </font>
                 </td>
@@ -133,7 +133,7 @@
               <tr>
                 <td width="18%" style=" padding:0px 0 0px 10px;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     連結網址
                   </font>
                 </td>
@@ -150,37 +150,37 @@
               <tr>
                 <th width="18%" align="left" style=" padding:0px 0 0px 10px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     執行版位/格式
                   </font>
                 </th>
                 <th width="" align="left" style="padding:0 3px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     內容說明
                   </font>
                 </th>
                 <th width="15%" align="right" style="padding:0 3px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333;font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     執行單價
                   </font>
                 </th>
                 <th width="8%" align="right" style="padding:0 3px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     數量
                   </font>
                 </th>
                 <th width="8%" align="right" style="padding:0 3px; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     單位
                   </font>
                 </th>
                 <th width="12%" align="right" style="padding:0px 10px 0px 0; border-bottom: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; color: #333;   font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     小計
                   </font>
                 </th>
@@ -454,7 +454,7 @@
               <tr>
                 <td style="padding:0px 10px; border-top: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     媒體廣告合計
                   </font>
                 </td>
@@ -462,7 +462,7 @@
                 </td>
                 <td align="right" style="padding:0px 10px; border-top: 1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     4,150,000
                   </font>
                 </td>
@@ -739,7 +739,7 @@
               <tr style=" vertical-align: text-top;">
                 <td style=" padding:0px 10px; border-top:1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     專案製作合計
                   </font>
                 </td>
@@ -747,7 +747,7 @@
                 </td>
                 <td align="right" style="padding:0px 10px; border-top:1px solid #bdbdbd;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     162,000
                   </font>
                 </td>
@@ -759,7 +759,7 @@
               <tr>
                 <td style="padding:0px 10px;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     專案金額合計
                   </font>
                 </td>
@@ -767,7 +767,7 @@
                 </td>
                 <td align="right" style="padding:0px 10px;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     4,890,000
                   </font>
                 </td>
@@ -861,7 +861,7 @@
               <tr>
                 <td style="padding:0px 10px; border-top:1px solid #bdbdbd;">
                   <font
-                    style="font-size:13px; line-height: 1.5; color: #333; font-style:italic; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; display: block; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     專案總金額
                   </font>
                 </td>
@@ -869,7 +869,7 @@
                 </td>
                 <td align="right" style="padding:0px 10px; border-top:1px solid #bdbdbd;">
                   <font
-                    style="font-size:14px; line-height: 1.5; color: #333;font-style:italic; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     5,453,700
                   </font>
                 </td>
@@ -930,7 +930,7 @@
                 </ul>
             </ul>
         
-            <font style="font-size:12px; color: #333; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+            <font style="font-size:12px; color: #333; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
               三、執行備註
             </font>
             <ul
@@ -968,18 +968,21 @@
               <tr>
                 <td width="48%" style=" padding:3px; border-top: 1px solid #333;">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #555; display: block; font-weight: bold; font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #555; display: block;font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     委託公司確認用印
                   </font>
                 </td>
                 <td width="4%">　</td>
                 <td width="48%" style=" padding:3px; border-top: 1px solid #333; position: relative; ">
                   <font
-                    style="font-size:12px; line-height: 1.5; color: #555; display: block;  font-weight: bold;  font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
+                    style="font-size:12px; line-height: 1.5; color: #555; display: block;font-family: Helvetica, '微軟正黑體',arial,sans-serif;">
                     威旭數據科技股份有限公司確認用印
                   </font>
-                  <div style="position:absolute; right:calc( 50% - 95px); bottom:20px; width: 190px; z-index: -1;">
-                    <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                  <div style="position:absolute; right:calc( 50% - 95px); bottom:12px; width: 190px; z-index: -1;">
+                    <div style="position: relative;">
+                      <font style="position: absolute; z-index: 5; bottom: 28px; color: #afafaf; z-index: -1;">No.11100000223134</font>
+                      <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
+                    </div>
                   </div>
                 </td>
               </tr>
