CRM - 用印單號 變兩行~避免被有心人士複刻

--- a/CRM/contract/master-contract_print_toRD.html
+++ b/CRM/contract/master-contract_print_toRD.html
@@ -406,8 +406,10 @@
           <div style="padding: 0px 0 240px 0; position: relative;">
             <div style="position:absolute; left: 20px; top:150px; width: 120px;">
               <div style="position: relative;">
-                <font style="position: absolute; z-index: 5; left: 40px; bottom: 15px; color: #afafaf; z-index: -1;">No.11100000223134
-                </font>
+                <font style="position: absolute; font-size: 20px;-moz-transform:rotate(15deg);  -webkit-transform:rotate(15deg);  -o-transform:rotate(15deg);  -ms-transform:rotate(15deg);  transform:rotate(15deg); z-index: 5; bottom: 85px; color: #c6c6c6; z-index: -1;">
+                  No.11100000223134</font>
+                <font style="position: absolute; font-size: 26px;-moz-transform:rotate(-8deg);  -webkit-transform:rotate(-8deg);  -o-transform:rotate(-8deg);  -ms-transform:rotate(-8deg);  transform:rotate(-8deg); z-index: 5; left: 0px; bottom:15px; color: #c6c6c6; z-index: -1;">
+                  No.11100000223134</font>
                 <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
               </div>
             </div>
@@ -1036,8 +1038,8 @@
             <td style="padding:3px 5px;border-bottom: 1px solid #dbdbdb; position: relative;">
               <div style="position:absolute; left: 20px; top:20px; width: 120px;">
                 <div style="position: relative;">
-                  <font style="position: absolute; z-index: 5; left: 40px; bottom: 25px; color: #afafaf; z-index: -1;">No.11100000223134
-                  </font>
+                  <font style="position: absolute; font-size: 20px;-moz-transform:rotate(15deg);  -webkit-transform:rotate(15deg);  -o-transform:rotate(15deg);  -ms-transform:rotate(15deg);  transform:rotate(15deg); z-index: 5; bottom: 85px; color: #c6c6c6; z-index: -1;">No.11100000223134</font>
+                  <font style="position: absolute; font-size: 26px;-moz-transform:rotate(-8deg);  -webkit-transform:rotate(-8deg);  -o-transform:rotate(-8deg);  -ms-transform:rotate(-8deg);  transform:rotate(-8deg); z-index: 5; left: 0px; bottom:15px; color: #c6c6c6; z-index: -1;">No.11100000223134</font>
                   <img src="../images/corporate_seal_l.png" width="100%" alt="公司用印">
                 </div>
               </div>
@@ -1076,7 +1078,9 @@
               </div> -->
               <div style="position:absolute; left: 15px; top:10px; width: 190px;">
                 <div style="position: relative;">
-                  <font style="position: absolute; z-index: 5; bottom: 28px; color: #afafaf; z-index: -1;">No.11100000223134</font>
+                  <font style="position: absolute; font-size: 20px;-moz-transform:rotate(-10deg);  -webkit-transform:rotate(-10deg);  -o-transform:rotate(-10deg);  -ms-transform:rotate(-10deg);  transform:rotate(-10deg); z-index: 5; bottom: 85px; color: #c6c6c6; z-index: -1;">
+                No.11100000223134</font>
+                  <font style="position: absolute; z-index: 5; font-size: 26px;-moz-transform:rotate(-5deg);  -webkit-transform:rotate(-5deg);  -o-transform:rotate(-5deg);  -ms-transform:rotate(-5deg);  transform:rotate(-5deg); bottom: 35px; color: #c6c6c6; z-index: -1;">No.11100000223134</font>
                   <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
                 </div>
               </div>
