--- a/CRM/contract/project-order-contract_print_toRD.html
+++ b/CRM/contract/project-order-contract_print_toRD.html
@@ -980,7 +980,10 @@
                   </font>
                   <div style="position:absolute; right:calc( 50% - 95px); bottom:12px; width: 190px; z-index: -1;">
                     <div style="position: relative;">
-                      <font style="position: absolute; z-index: 5; bottom: 28px; color: #afafaf; z-index: -1;">No.11100000223134</font>
+                      <font style="position: absolute; font-size: 20px;-moz-transform:rotate(-10deg);  -webkit-transform:rotate(-10deg);  -o-transform:rotate(-10deg);  -ms-transform:rotate(-10deg);  transform:rotate(-10deg); z-index: 5; bottom: 85px; color: #c6c6c6; z-index: -1;">
+                        No.11100000223134</font>
+                      <font style="position: absolute; font-size: 26px;-moz-transform:rotate(-5deg);  -webkit-transform:rotate(-5deg);  -o-transform:rotate(-5deg);  -ms-transform:rotate(-5deg);  transform:rotate(-5deg); z-index: 5; bottom: 35px; color: #c6c6c6; z-index: -1;">No.11100000223134</font>
+
                       <img src="../images/corporate_seal_media.png" width="100%" alt="公司用印 | 媒體專用章">
                     </div>
                   </div>
