tc-新增語系下拉&地圖case調整為固定px

--- a/jay/tc/case.html
+++ b/jay/tc/case.html
@@ -66,6 +66,14 @@
                 <p class="text">
                     <span class="ss">Copyrights Ⓒ 2023 Touch Cloud Inc. All Rights Reserved.</span>
                 </p>
+                <div class="languageBox">
+                    <div class="styled-select">
+                        <select class="md-input">
+                            <option value="0" selected="selected">EN</option>
+                            <option value="1">TW</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </nav>
         <!-- Site Overlay -->
@@ -125,6 +133,16 @@
                                     <a class="line" href="contact.html">Contact Us</a>
                                 </p>
                             </li>
+                            <li>
+                                <div class="languageBox">
+                                    <div class="styled-select">
+                                        <select class="md-input">
+                                            <option value="0" selected="selected">EN</option>
+                                            <option value="1">TW</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -151,27 +169,27 @@
                     <div class="block-box">
                         <!-- 這邊要抓 x, y 不知道怎麼抓-->
                         <!-- country_xy 可 div 可 a -->
-                        <div class="country_xy" style="left: 33%; top: 35%;">
+                        <div class="country_xy" style="left: 400px; top: 300px;">
                             <div class="icon Selected"></div>
                             <p>Taiwan</p>
                         </div>
-                        <div class="country_xy" style="left: 41%; top: 20%;">
+                        <div class="country_xy" style="left: 546px; top: 160px;">
                             <div class="icon"></div>
                             <p>Japan</p>
                         </div>
-                        <div class="country_xy" style="left: 35%; top: 19%;">
+                        <div class="country_xy" style="left: 465px; top: 150px;">
                             <div class="icon"></div>
                             <p>Korea</p>
                         </div>
-                        <div class="country_xy" style="left: 26%; top: 42%;">
+                        <div class="country_xy" style="left: 280px; top: 338px;">
                             <div class="icon"></div>
                             <p>Hong Kong</p>
                         </div>
-                        <div class="country_xy" style="left: 23%; bottom: 36%;">
+                        <div class="country_xy" style="left: 248px; bottom: 306px;">
                             <div class="icon"></div>
                             <p>Thailand</p>
                         </div>
-                        <div class="country_xy" style="left: 23%; bottom: 16%;">
+                        <div class="country_xy" style="left: 235px; bottom: 125px;">
                             <div class="icon"></div>
                             <p>Singapore</p>
                         </div>
