--- a/jay/tc/about.html
+++ b/jay/tc/about.html
@@ -66,6 +66,14 @@
                 <p class="text">
                     <span class="ss">Copyrights Ⓒ 2023 Touch Cloud Inc. All Rights Reserved.</span>
                 </p>
+                <div class="languageBox">
+                    <div class="styled-select">
+                        <select class="md-input">
+                            <option value="0" selected="selected">EN</option>
+                            <option value="1">TW</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </nav>
         <!-- Site Overlay -->
@@ -124,6 +132,16 @@
                                 <p>
                                     <a class="line" href="contact.html">Contact Us</a>
                                 </p>
+                            </li>
+                            <li>
+                                <div class="languageBox">
+                                    <div class="styled-select">
+                                        <select class="md-input">
+                                            <option value="0" selected="selected">EN</option>
+                                            <option value="1">TW</option>
+                                        </select>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </nav>
