--- a/jay/tc/case.html
+++ b/jay/tc/case.html
@@ -211,7 +211,7 @@
                             <ul class="logos">
                                 <li>
                                     <!-- 可是 a 或 div -->
-                                    <a class="img-logo" href="#">
+                                    <div class="img-logo">
                                         <img src="images/img_showcase_01.png" alt="">
                                     </a>
                                 </li>
