CRM-新增委刊單新增「儲存草稿」按鈕
原委刊單最下方的單一按鈕更新為兩顆：儲存草稿、提交審核

--- a/CRM/order.html
+++ b/CRM/order.html
@@ -806,9 +806,10 @@
                     </div>
                 </form>
             </div>
-            <div class="bottom-btn-tool">
+            <div class="bottom-btn-tool both-btn">
                 <fieldset class="field">
-                    <input class="btn--primary-xl " type="submit" value="儲存">
+                    <input class="btn--primary-xl btn--bg-w" type="submit" value="儲存草稿">
+                    <input class="btn--primary-xl " type="submit" value="提交審核">
                 </fieldset>
             </div>
         </div>
